Making box shadow less intense again so that image cropping issues aren't that much in your face

--- a/css/theme/source/jetbrains.scss
+++ b/css/theme/source/jetbrains.scss
@@ -62,7 +62,6 @@ section.has-dark-background {
 .reveal section img {
   border: none;
   max-height: 45vh;
-  box-shadow: 0 0 20px rgba(0,0,0,0.25);
 }
 
 .reveal h2 {
